--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "build": "vite build"
   },
   "dependencies": {
-    "vue": "^3.0.0-rc.1"
+    "vue": "^3.0.0-rc.1",
+    "vue-router": "4.0.0-beta.3"
   },
   "devDependencies": {
-    "vite": "^1.0.0-rc.1",
-    "@vue/compiler-sfc": "^3.0.0-rc.1"
+    "@vue/compiler-sfc": "^3.0.0-rc.1",
+    "eslint": "^7.6.0",
+    "eslint-plugin-vue": "^7.0.0-alpha.10",
+    "vite": "^1.0.0-rc.1"
   }
 }
