--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gulu-ui-one",
+  "name": "gulu-ui-1",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -10,10 +10,8 @@
     "vue-router": "4.0.0-beta.3"
   },
   "devDependencies": {
-    "sass": "^1.26.10",
+    "sass": "1.26.10",
     "@vue/compiler-sfc": "^3.0.0-rc.1",
-    "eslint": "^7.6.0",
-    "eslint-plugin-vue": "^7.0.0-alpha.10",
     "vite": "^1.0.0-rc.1"
   }
 }
